DH: fix style menu on iphone

--- a/wp-content/themes/denholm/scss/components/_box-form.scss
+++ b/wp-content/themes/denholm/scss/components/_box-form.scss
@@ -1,9 +1,4 @@
 .box-form {
-  @include susy-media(mobileOnly) {
-    margin-top: 44px;
-    margin-bottom: 30px;
-  }
-
   form {
     position: relative;
   }
